--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -3,20 +3,93 @@ name: Crystal CI
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        crystal-version: [1.9.2, 1.10.1, latest]
+
     container:
-      image: crystallang/crystal
+      image: crystallang/crystal:${{ matrix.crystal-version }}
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Cache shards
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/shards
+          lib/
+        key: ${{ runner.os }}-shards-${{ hashFiles('shard.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-shards-
+
     - name: Install dependencies
       run: shards install
+
+    - name: Check code formatting
+      run: crystal tool format --check
+
+    - name: Run linter
+      run: shards run ameba
+
     - name: Run tests
       run: crystal spec
+
+    - name: Build binary
+      run: crystal build src/lapis.cr --release -o bin/lapis
+
+    - name: Test CLI help
+      run: ./bin/lapis help
+
+    - name: Test example site build
+      run: |
+        cd exampleSite
+        ../bin/lapis build
+        ls -la public/
+        test -f public/index.html
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: test
+    runs-on: ubuntu-latest
+
+    container:
+      image: crystallang/crystal:latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: shards install
+
+    - name: Build release binary
+      run: crystal build src/lapis.cr --release -o bin/lapis
+
+    - name: Create release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body_path: CHANGELOG.md
+        draft: false
+        prerelease: false
+
+    - name: Upload binary
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./bin/lapis
+        asset_name: lapis-linux-x86_64
+        asset_content_type: application/octet-stream
