--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: lapis
-version: 0.1.0
+version: 0.2.0
 
 authors:
   - Lapis Contributors
@@ -12,6 +12,9 @@ dependencies:
   markd:
     github: icyleaf/markd
     version: "~> 0.5.0"
+  http_client:
+    github: crystal-lang/http_client
+    version: "~> 0.1.0"
 
 development_dependencies:
   ameba:
