--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -4,6 +4,12 @@ description: "Showcasing the power of Crystal-based static site generation with 
 author: "Lapis Team"
 theme: "default"
 
+# Multi-format output configuration
+outputs:
+  single: ["html", "json", "llm"]
+  home: ["html", "rss"]
+  list: ["html", "rss"]
+
 # Blog-specific settings
 posts_per_page: 10
 excerpt_length: 200
