--- a/.github/workflows/build-example-site.yml
+++ b/.github/workflows/build-example-site.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Example Site
 
 on:
   push:
-    branches: [ main, v0.2.0 ]
+    branches: [ main, v0.2.0, v0.3.0 ]
     paths:
       - 'exampleSite/**'
       - 'src/**'
@@ -10,7 +10,7 @@ on:
       - 'shard.lock'
       - '.github/workflows/build-example-site.yml'
   pull_request:
-    branches: [ main, v0.2.0 ]
+    branches: [ main, v0.2.0, v0.3.0 ]
     paths:
       - 'exampleSite/**'
       - 'src/**'
@@ -85,17 +85,17 @@ jobs:
         retention-days: 30
     
     - name: Setup Pages
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0' || github.ref == 'refs/heads/v0.3.0'
       uses: actions/configure-pages@v5
     
     - name: Upload to GitHub Pages
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0' || github.ref == 'refs/heads/v0.3.0'
       uses: actions/upload-pages-artifact@v3
       with:
         path: exampleSite/public
     
     - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0'
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v0.2.0' || github.ref == 'refs/heads/v0.3.0'
       id: deployment
       uses: actions/deploy-pages@v4
 
