--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -2,10 +2,10 @@ name: Crystal CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "v0.3.0" ]
     tags: [ "v*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "v0.3.0" ]
 
 jobs:
   test:
