--- a/.github/workflows/build-example-site.yml
+++ b/.github/workflows/build-example-site.yml
@@ -48,7 +48,10 @@ jobs:
           crystal-deps-
     
     - name: Install dependencies
-      run: shards install --production
+      run: |
+        shards install
+        shards lock
+        shards install --production
     
     - name: Build Lapis binary
       run: |
@@ -114,7 +117,10 @@ jobs:
         crystal: "1.10.1"
     
     - name: Install dependencies
-      run: shards install --production
+      run: |
+        shards install
+        shards lock
+        shards install --production
     
     - name: Build and test Lapis
       run: |
