--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -32,7 +32,10 @@ jobs:
           ${{ runner.os }}-shards-
 
     - name: Install dependencies
-      run: shards install
+      run: |
+        shards install
+        # Generate lock file for reproducible builds
+        shards lock
 
     - name: Check code formatting
       run: crystal tool format --check
@@ -68,7 +71,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install dependencies
-      run: shards install
+      run: |
+        shards install
+        shards lock
 
     - name: Build release binary
       run: crystal build src/lapis.cr --release -o bin/lapis
