--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, v0.3.0 ]
+    branches-ignore: []
   pull_request:
-    branches: [ main, v0.3.0 ]
+    branches: []
 
 jobs:
   test:
