--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,34 @@ name: CI
 
 on:
   push:
-    branches-ignore: []
+    branches: [ main, master, develop ]
   pull_request:
-    branches: []
+    branches: [ main, master, develop ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    
+    strategy:
+      matrix:
+        crystal-version: ['1.11.0', '1.10.0', '1.9.0']
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Install Crystal
-      uses: crystal-lang/install-crystal@v1
+    - uses: actions/checkout@v4
+    
+    - name: Setup Crystal
+      uses: oprypin/install-crystal@v1
       with:
-        crystal: "1.10.1"
-
+        crystal-version: ${{ matrix.crystal-version }}
+    
     - name: Install dependencies
       run: shards install
-
+    
+    - name: Run Ameba linter
+      run: ./bin/ameba
+    
     - name: Run tests
       run: crystal spec
-
-    - name: Build binary
-      run: crystal build src/lapis.cr --release -o bin/lapis
-
-    - name: Test example site
-      run: |
-        cd exampleSite
-        ../bin/lapis build
-        test -f public/index.html
+    
+    - name: Build project
+      run: crystal build src/lapis.cr --release
